Make cold wallet tab work
This is based on https://github.com/r0bertz/ripple-client-desktop/commit/586cb7f05ed033aef394880216381760d7a285b8?diff=split

Codes that are commented out are removed.

--- a/src/templates/tabs/coldwallet.jade
+++ b/src/templates/tabs/coldwallet.jade
@@ -19,10 +19,6 @@ container(ng-controller="ColdWalletCtrl")
               dd {{networkFee}} XRP
               dt Regular Key Enabled
               dd {{regularKeyEnabled}}
-      //div.col-xs-12.col-sm-7
-        div.well
-          p(ng-hide="transactionError") {{lastTxn}} The transaction was validated at {{txnTime | date:'yyyy-MM-dd HH:mm:ss Z'}}.
-          p.error(ng-show="transactionError") {{transactionErrorMessage}}
     div.row.row-content
       div.col-xs-12
         h4 Account Flags 
@@ -62,11 +58,11 @@ container(ng-controller="ColdWalletCtrl")
               tr.available
                 td Available
                 td
-                td {{ max_spend | rpamount:{precision: 6} }}
+                td {{ max_spend }}
               tr.reserve
                 td Reserve
                 td
-                td {{ reserve | rpamount:{precision: 6} }}
+                td {{ reserve }}
               tr(ng-repeat="balance in lines")
                 td {{balance.currency}}
                 td {{balance.account}}
