--- a/src/templates/tabs/settingstrade.jade
+++ b/src/templates/tabs/settingstrade.jade
@@ -1,7 +1,7 @@
 section.col-xs-12.content(ng-controller="SettingsTradeCtrl")
   div(ng-show='debug') This page is not available in debug mode
 
-  div(ng-show="!loadingAccount && !account.Balance && loadState.account && connected && !debug")
+  div(ng-show="!loadingAccount && !account.xrpBalance && loadState.account && connected && !debug")
     include banner/_unfunded
   .row(ng-show='!debug')
     .col-sm-3
