--- a/src/templates/tabs/trade.jade
+++ b/src/templates/tabs/trade.jade
@@ -11,7 +11,7 @@ section.col-xs-12.content(ng-controller="TradeCtrl")
 
   //- Connected
 
-  div(ng-show="!loadingAccount && !account.Balance && loadState.account && connected && !debug")
+  div(ng-show="!loadingAccount && !account.xrpBalance && loadState.account && connected && !debug")
     include ../tabs/banner/_unfunded
 
   group(ng-show="connected && loadState.offers")
@@ -136,14 +136,14 @@ section.col-xs-12.content(ng-controller="TradeCtrl")
               | {{book.last_price | rpamount:{rel_precision: 5, rel_min_precision: 5} }}
 
       //- Show message if account has not been funded yet.
-      .unfunded(ng-hide="account.Balance")
+      .unfunded(ng-hide="account.xrpBalance")
         p.literal(l10n) You have to be funded before you can trade
 
       .trade-embeded-chart(
         ng-bind-html="tradeEmbeddedHTML")
 
       //- 1. Order widgets
-      group.row.send-widgets(ng-show="account.Balance && !readOnly")
+      group.row.send-widgets(ng-show="account.xrpBalance && !readOnly")
         .col-xs-12.col-sm-6(ng-repeat="type in ['buy','sell']")
           .trade-widget(ng-switch="order[type].mode")
             .head
@@ -164,7 +164,7 @@ section.col-xs-12.content(ng-controller="TradeCtrl")
               span.available(ng-show="type == 'buy'", l10n)
                 span.amount
                   span(ng-show="order.second_currency.is_native()")
-                    | {{account.Balance | rpamount}} XRP
+                    | {{account.xrpBalance }} XRP
                   span(ng-hide="order.second_currency.is_native()")
                     | {{lines[order.second_issuer+order.second_currency.to_json()].balance || "0" | rpamount}}&#32;
                     span(
@@ -176,7 +176,7 @@ section.col-xs-12.content(ng-controller="TradeCtrl")
               span.available(ng-show="type == 'sell'", l10n)
                 span.amount
                   span(ng-show="order.first_currency.is_native()")
-                    | {{account.Balance | rpamount}} XRP
+                    | {{account.xrpBalance }} XRP
                   span(ng-hide="order.first_currency.is_native()")
                     | {{lines[order.first_issuer+order.first_currency.to_json()].balance || "0" | rpamount}}&#32;
                     span(
