Change type of account.xrpBalance from String to Number

--- a/src/templates/tabs/balance.jade
+++ b/src/templates/tabs/balance.jade
@@ -50,7 +50,7 @@ section.col-xs-12.content(ng-controller="BalanceCtrl")
                   rp-popover-trigger="hover"
                   l10n-data-content="Minimum amount of XRP required to fund your account. You cannot spend the reserve.")
               .balance.col-xs-2
-                span(ng-show="account.reserve") {{ account.reserve | rpamount:{precision: 20, min_precision: 6, max_sig_digits: 20} }}
+                span(ng-show="account.reserve") {{ account.reserve }}
                 span(ng-hide="account.reserve") 0
           //- TODO Determine currencies order
           .balancebox.currency-non-native(ng-repeat="entry in balances", ng-class="'currency-' + (entry.total | rpcurrency | lowercase)")
