--- a/src/templates/tabs/coldwallet.jade
+++ b/src/templates/tabs/coldwallet.jade
@@ -54,7 +54,7 @@ container(ng-controller="ColdWalletCtrl")
               tr
                 td XRP
                 td
-                td {{xrpBalance}}
+                td {{Balance}}
               tr.available
                 td Available
                 td
