--- a/src/templates/tabs/advanced.jade
+++ b/src/templates/tabs/advanced.jade
@@ -1,5 +1,5 @@
 section.col-sm-12.content(ng-controller="AdvancedCtrl")
-  div(ng-show="!loadingAccount && !account.xrpBalance && loadState.account && connected && !debug")
+  div(ng-show="!loadingAccount && !account.Balance && loadState.account && connected && !debug")
     include ../tabs/banner/_unfunded
   .row
     .col-sm-3
