--- a/src/templates/tabs/contacts.jade
+++ b/src/templates/tabs/contacts.jade
@@ -1,5 +1,5 @@
 section.col-xs-12.content(ng-controller="ContactsCtrl")
-  div(ng-show="!loadingAccount && !account.xrpBalance && loadState.account && connected && !debug")
+  div(ng-show="!loadingAccount && !account.Balance && loadState.account && connected && !debug")
     include ../tabs/banner/_unfunded
 
   .row.row-padding-small.head.hidden-xs
