Remove 'Submit Txn' tab
Signing transactions offline will not be supported. So there is no use for this tab.

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -1,5 +1,5 @@
 // TODO all _ or all -
-.t-register, .t-login, .t-submit, .t-coldwallet, .t-tou {
+.t-register, .t-login, .t-coldwallet, .t-tou {
   header nav {
     display: none;
   }
@@ -17,7 +17,7 @@
   padding-top: 14px;
   padding-bottom: 14px;
   font-size: 14px;
-} 
+}
 
 .banner {
   margin: 2% 8.5% 0 8.5%;
@@ -54,7 +54,7 @@
         font-weight: 400;
         margin-bottom: 3px;
       }
-      
+
     }
     .form-group {
       p.error-text {
@@ -152,7 +152,7 @@
   }
 
   .auth-form-wrapper {
-    
+
     .submit-btn-container {
       width: 70%;
     }
@@ -175,13 +175,13 @@
   }
   .register_masterkey {
     position: relative;
-    
+
     .auth-attention {
       margin-top: 90px;
       text-align: center;
-    }     
+    }
   }
-  
+
   .welcome-wrapper {
   text-align: center;
   }
@@ -204,7 +204,7 @@
     .content {
       padding-top: 0;
       .auth-form-container {
-        padding: 15px; 
+        padding: 15px;
         padding-bottom: 0;
       }
     }
@@ -217,7 +217,7 @@
       }
     }
   }
-  
+
   .dragover {
     color: #333333;
     background-color: #e6e6e6;
@@ -574,7 +574,7 @@
           input {
             margin-right: 10px;
           }
-        }     
+        }
       }
     }
   }
@@ -613,7 +613,7 @@
   .limit {
     text-overflow: ellipsis;
       overflow: hidden;
-  }  
+  }
   .currencyTitle {
     font-size: @font-size-big;
 
@@ -634,12 +634,12 @@
     margin-top: 10px;
     margin-bottom: 10px;
     font-weight: bold;
-    
+
   }
 
   .lines {
     color: @darkgray;
-    
+
     .line {
       padding: 5px 0;
     }
@@ -913,7 +913,7 @@
           @media (max-width: @screen-xs-max) {
             font-size: 12px;
           }
-          .effects {  
+          .effects {
             border-top: 1px solid @midgray;
             border-bottom: 1px solid @midgray;
             padding-top: 10px;
@@ -1258,7 +1258,7 @@
     float: left;
   }
   .edit-security-pswd{
-    line-height: 45px;  
+    line-height: 45px;
   }
   .settingPage a {
     display: block;
@@ -1350,10 +1350,10 @@
   label[for=persistUnlock]{
     padding-left: 5px;
   }
-  
+
   .note {
     font-size:12px;
-    color:@darkgray;  
+    color:@darkgray;
   }
 
   #renameForm {
@@ -1464,7 +1464,7 @@
 
   #servers {
     padding-top: 0px;
-    
+
     .trust-line-form {
       .edit-trust-line {
         line-height: 34px;
@@ -1495,12 +1495,12 @@
       }
       @media (max-width: @screen-xs-max) {
         .port-wrapper {
-        
+
           padding-left: 0px;
-        
+
         }
       }
-      
+
     }
     .helperInput {
       line-height: 44px;
@@ -1778,12 +1778,12 @@
       margin: 10px 0;
     }
   }
-  
+
   .alert-danger .dismiss {
     margin:0 5px;
     color:darken(@midred, 10%);
   }
-  
+
   .alert-danger .dismiss:hover {
     color:darken(@midred, 30%);
   }
