Remove 'Cold wallet settings' tab
This is mainly used to set the directory to save signed transactions.

Since signing transactions offline will not be supported, this will be of no use.

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -1373,7 +1373,7 @@
 
 }
 
-#t-advanced, #t-accountflags, #t-coldwalletsettings {
+#t-advanced, #t-accountflags {
   .settingPage a {
     display: block;
     padding: 10px;
