Make regular key feature work again
Saving transaction offline feature is removed.

--- a/src/templates/tabs/security.jade
+++ b/src/templates/tabs/security.jade
@@ -20,7 +20,7 @@ section.col-xs-12.content(ng-controller="SecurityCtrl")
               .col-xs-3.col-sm-4.col-md-3
                 a(href="", ng-click="unmaskSecret()", ng-hide="security.master_seed", l10n) Show
                 a(href="", ng-click="security.master_seed = null", ng-show="security.master_seed", l10n) Hide
-          .section
+          .section(ng-show="onlineMode")
             .descriptor(l10n) Regular Key
             div(ng-hide="userBlob.data.regularKey")
               label(l10n) Account doesn't have a regular key
@@ -38,7 +38,7 @@ section.col-xs-12.content(ng-controller="SecurityCtrl")
               //- .col-md-3(ng-show="userBlob.data.masterkey")
               //-   //- TODO some help here, informing that the regular wallet file doesn't contain the master key
               //-   a(href="", ng-click="saveRegularKey()", l10n) Save Wallet File
-              rp-popup(rp-popup-on-open="saveRegularKey()", ng-show="userBlob.data.masterkey") 
+              rp-popup(rp-popup-on-open="saveRegularKey()", ng-show="userBlob.data.masterkey")
                 .col-md-3
                   a(href="", rp-popup-link, ng-disabled='trustForm.$invalid || verifying', l10n) Save Wallet File
                 div.connectModal(rp-popup-content, ng-show="mode.register_regular_key_wallet")
@@ -46,8 +46,8 @@ section.col-xs-12.content(ng-controller="SecurityCtrl")
                     .navbar-brand.hidden-sm.modal-logo#logo
                     .modal-title(l10n) Encrypt
                   .modal-body
-                    div.modal-prompt(l10n) 
-                      div(l10n-inc) Encrypt your regular key file: 
+                    div.modal-prompt(l10n)
+                      div(l10n-inc) Encrypt your regular key file:
                     form(name='encryptForm', ng-submit='encryptRegularKey()')
                       .form-group(ng-class="{'field-error': 'weak' === strength}")
                         label(for='register_password1', l10n) Password
@@ -73,15 +73,6 @@ section.col-xs-12.content(ng-controller="SecurityCtrl")
                         span(ng-show="loading", l10n) Loading...
                         span(ng-hide="loading", l10n) Confirm
                       button.modal-btn.btn.btn-cancel.btn-md.btn-cancel(data-dismiss="modal",
-                        ng-click='toggle_form()', ng-hide="loading", l10n) cancel    
+                        ng-click='toggle_form()', ng-hide="loading", l10n) cancel
               .col-md-1(ng-show="userBlob.data.masterkey")
                 a(href="", ng-click="removeRegularKey()", l10n) Remove
-              
-        //- Offline Sending
-        hr
-        group.mode-status(ng-show='mode.offlineSending')
-          signed-transaction(data="{{signedTransaction}}", txJSON="{{txJSON}}", hash="{{hash}}")
-          button.btn.btn-small.btn-primary(ng-click="mode.offlineSending = false") Close
-
-        alert.alert-success(ng-show="mode.saved_regular_key_wallet", l10n) Regular key wallet saved: {{regularWallet}}.
-        alert.alert-danger(ng-show="mode.error_regular_key_wallet", l10n) Error saving wallet.  Please try again.
