--- a/src/templates/tabs/orderbook.jade
+++ b/src/templates/tabs/orderbook.jade
@@ -22,27 +22,27 @@ section.col-xs-12.content(ng-controller="OrderbookCtrl")
             .title(l10n) Bids
             .row.head(ng-show="book.bids.length")
               .col-xs-4.sum(l10n) Sum
-                .currency {{book.bids[0].TakerPays | rpcurrency}}
+                .currency {{book.bids[0].TakerPaysFunded | rpcurrency}}
                 .issuer(
-                  ng-show="(book.bids[0].TakerPays | rpcurrency) !== 'XRP'"
-                  rp-pretty-issuer="book.bids[0].TakerPays | rpissuer"
+                  ng-show="(book.bids[0].TakerPaysFunded | rpcurrency) !== 'XRP'"
+                  rp-pretty-issuer="book.bids[0].TakerPaysFunded | rpissuer"
                   rp-pretty-issuer-or-short)
               .col-xs-4.size(l10n) Size
-                .currency {{book.bids[0].TakerPays | rpcurrency}}
+                .currency {{book.bids[0].TakerPaysFunded | rpcurrency}}
                 .issuer(
-                  ng-show="(book.bids[0].TakerPays | rpcurrency) !== 'XRP'"
-                  rp-pretty-issuer="book.bids[0].TakerPays | rpissuer"
+                  ng-show="(book.bids[0].TakerPaysFunded | rpcurrency) !== 'XRP'"
+                  rp-pretty-issuer="book.bids[0].TakerPaysFunded | rpissuer"
                   rp-pretty-issuer-or-short)
               .col-xs-4.price(l10n) Bid Price
-                .currency {{book.bids[0].TakerGets | rpcurrency}}
+                .currency {{book.bids[0].TakerGetsFunded | rpcurrency}}
                 .issuer(
-                  ng-show="(book.bids[0].TakerGets | rpcurrency) !== 'XRP'"
-                  rp-pretty-issuer="book.bids[0].TakerGets | rpissuer"
+                  ng-show="(book.bids[0].TakerGetsFunded | rpcurrency) !== 'XRP'"
+                  rp-pretty-issuer="book.bids[0].TakerGetsFunded | rpissuer"
                   rp-pretty-issuer-or-short)
             .row(ng-repeat='order in book.bids', ng-class="{my: order.my}", title="{{order.Account}}")
               .col-xs-4.rpamount.sum
                 span(rp-bind-color-amount="order.showSum")
-              .col-xs-4.rpamount.size(rp-bind-color-amount="order.showTakerPays")
+              .col-xs-4.rpamount.size(rp-bind-color-amount="order.showTakerPaysFunded")
               .col-xs-4.rpamount.price
                 span(rp-bind-color-amount="order.showPrice")
             .message(ng-show='!book.bids.length', l10n) There are currently no bids for this pair.
@@ -50,27 +50,27 @@ section.col-xs-12.content(ng-controller="OrderbookCtrl")
             .title(l10n) Asks
             .row.head(ng-show="book.asks.length")
               .col-xs-4.price(l10n) Ask Price
-                .currency {{book.asks[0].TakerPays | rpcurrency}}
+                .currency {{book.asks[0].TakerPaysFunded | rpcurrency}}
                 .issuer(
-                  ng-show="(book.asks[0].TakerPays | rpcurrency) !== 'XRP'"
-                  rp-pretty-issuer="book.asks[0].TakerPays | rpissuer"
+                  ng-show="(book.asks[0].TakerPaysFunded | rpcurrency) !== 'XRP'"
+                  rp-pretty-issuer="book.asks[0].TakerPaysFunded | rpissuer"
                   rp-pretty-issuer-or-short)
               .col-xs-4.size(l10n) Size
-                .currency {{book.asks[0].TakerGets | rpcurrency}}
+                .currency {{book.asks[0].TakerGetsFunded | rpcurrency}}
                 .issuer(
-                  ng-show="(book.asks[0].TakerGets | rpcurrency) !== 'XRP'"
-                  rp-pretty-issuer="book.asks[0].TakerGets | rpissuer"
+                  ng-show="(book.asks[0].TakerGetsFunded | rpcurrency) !== 'XRP'"
+                  rp-pretty-issuer="book.asks[0].TakerGetsFunded | rpissuer"
                   rp-pretty-issuer-or-short)
               .col-xs-4.sum(l10n) Sum
-                .currency {{book.asks[0].TakerGets | rpcurrency}}
+                .currency {{book.asks[0].TakerGetsFunded | rpcurrency}}
                 .issuer(
-                  ng-show="(book.asks[0].TakerGets | rpcurrency) !== 'XRP'"
-                  rp-pretty-issuer="book.asks[0].TakerGets | rpissuer"
+                  ng-show="(book.asks[0].TakerGetsFunded | rpcurrency) !== 'XRP'"
+                  rp-pretty-issuer="book.asks[0].TakerGetsFunded | rpissuer"
                   rp-pretty-issuer-or-short)
             .row(ng-repeat='order in book.asks', ng-class="{my: order.my}", title="{{order.Account}}")
               .col-xs-4.rpamount.price
                 span(rp-bind-color-amount="order.showPrice")
-              .col-xs-4.rpamount.size(rp-bind-color-amount="order.showTakerGets")
+              .col-xs-4.rpamount.size(rp-bind-color-amount="order.showTakerGetsFunded")
               .col-xs-4.rpamount.sum
                 span(rp-bind-color-amount="order.showSum")
             .message(ng-show='!book.asks.length', l10n) There are currently no asks for this pair.
