--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -11,7 +11,8 @@ html
     link(rel='icon', sizes='196x196', href='img/mobile/icon196.png')
     link(rel='icon', sizes='128x128', href='img/mobile/icon128.png')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no')
-    meta(name='monetization', content='$twitter.xrptipbot.com/r0bertz')
+
+    include ../../web-monetization.html
 
     // build:css css/vendor.css
     link(href='../node_modules/font-awesome/css/font-awesome.min.css', rel='stylesheet')
