--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -11,7 +11,7 @@
          url('../fonts/OpenSans-Light-webfont.svg#OpenSansLight') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
 @font-face {
@@ -23,7 +23,7 @@
          url('../fonts/OpenSans-LightItalic-webfont.svg#OpenSansLightItalic') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
 @font-face {
@@ -35,7 +35,7 @@
          url('../fonts/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
 @font-face {
@@ -47,7 +47,7 @@
          url('../fonts/OpenSans-Italic-webfont.svg#OpenSansItalic') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
 @font-face {
@@ -59,7 +59,7 @@
          url('../fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
 @font-face {
@@ -71,7 +71,7 @@
          url('../fonts/OpenSans-SemiboldItalic-webfont.svg#OpenSansSemiboldItalic') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
 @font-face {
@@ -83,7 +83,7 @@
          url('../fonts/OpenSans-Bold-webfont.svg#OpenSansBold') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
 @font-face {
@@ -95,7 +95,7 @@
          url('../fonts/OpenSans-BoldItalic-webfont.svg#OpenSansBoldItalic') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
 @font-face {
@@ -107,7 +107,7 @@
          url('../fonts/OpenSans-ExtraBold-webfont.svg#OpenSansExtrabold') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
 @font-face {
@@ -119,6 +119,6 @@
          url('../fonts/OpenSans-ExtraBoldItalic-webfont.svg#OpenSansExtraboldItalic') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-display: fallback;
 }
 
