Append hash to js and css files name.
Then in web server, set cache control max-age to a very large value, so
that if these files doesn't change, then browser will just use cached
version and if they change, the file names change too, so the browser
will always download the new version.

Also see
https://developers.google.com/web/fundamentals/performance/optimizing-content-efficiency/http-caching#invalidating_and_updating_cached_responses

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -34,14 +34,17 @@ html
     script(src='../deps/modernizr.js')
     // endbuild
 
-    // JAVASCRIPT
+    // build:js js/vender.js
     script(src='js/vendor.js')
+    // endbuild
 
     // build:js js/config.js
     script(src='../config.js')
     // endbuild
 
+    // build:js js/app.js
     script(src='js/app.js')
+    // endbuild
 
   body(ng-app='rp', ng-strict-di, ng-controller='AppCtrl', ng-class="{loaded: !pageLoading}")
     //- TODO make this work div(ng-include="'templates/' + lang + '/client/layout.html'")
