--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -131,6 +131,39 @@
   }
 }
 
+#t-intro {
+  #topMarkets {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .market {
+    position: relative;
+    flex: 1;
+    margin: .5%;
+  }
+  .market:hover{
+    border-color: #249;
+    box-shadow: 0 0 5px #36c, inset 0 0 3px #36c;
+  }
+  .market a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .title {
+    text-align: center;
+  }
+  iframe {
+    height: 280px;
+    margin: .5%;
+    border: none;
+    width: 99%;
+  }
+}
+
 #t-orderbook {
 
   @bg: @white;
