--- a/src/templates/tabs/orderbook.jade
+++ b/src/templates/tabs/orderbook.jade
@@ -39,7 +39,7 @@ section.col-xs-12.content(ng-controller="OrderbookCtrl")
                   ng-show="(book.bids[0].TakerGetsFunded | rpcurrency) !== 'XRP'"
                   rp-pretty-issuer="book.bids[0].TakerGetsFunded | rpissuer"
                   rp-pretty-issuer-or-short)
-            .row(ng-repeat='order in book.bids', ng-class="{my: order.my}", title="{{order.Account}}")
+            .row(ng-repeat='order in book.bids', ng-class="{my: order.my}", title="{{order.Accounts}}")
               .col-xs-4.rpamount.sum
                 span(rp-bind-color-amount="order.showSum")
               .col-xs-4.rpamount.size(rp-bind-color-amount="order.showTakerPaysFunded")
@@ -67,7 +67,7 @@ section.col-xs-12.content(ng-controller="OrderbookCtrl")
                   ng-show="(book.asks[0].TakerGetsFunded | rpcurrency) !== 'XRP'"
                   rp-pretty-issuer="book.asks[0].TakerGetsFunded | rpissuer"
                   rp-pretty-issuer-or-short)
-            .row(ng-repeat='order in book.asks', ng-class="{my: order.my}", title="{{order.Account}}")
+            .row(ng-repeat='order in book.asks', ng-class="{my: order.my}", title="{{order.Accounts}}")
               .col-xs-4.rpamount.price
                 span(rp-bind-color-amount="order.showPrice")
               .col-xs-4.rpamount.size(rp-bind-color-amount="order.showTakerGetsFunded")
